--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
 				var c = document.getElementsByTagName("script")[0];
 				c.parentNode.insertBefore(cp, c); })(); </script><noscript>Powered by Cincopa <a href='http://www.cincopa.com/video-hosting'>Video Hosting for Business</a> solution.<span>Slideshow</span><span>Homepage</span><span>New Upcoming Graphic Designer</span><span>Who is this mysterious graphic designer everyone is raving about? </span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 1200</span><span>height</span><span> 750</span><span>BURGUNDY!</span><span>Burgundy is December's color. Hot color that's great for the holidays and easily matched with a hot red or dark lipstick.</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 2238</span><span>height</span><span> 1292</span><span>Style Weather</span><span>Have a hard time knowing what to wear? Do you sometimes under/over dress? Then you prayers have been answered!</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 2238</span><span>height</span><span> 1317</span><span>HAPPY HOLIDAYS!</span><span>Hope you all have a Merry Christmas and a Happy New Year!</span><span>originaldate</span><span> 1/1/0001 6:00:00 AM</span><span>width</span><span> 2247</span><span>height</span><span> 1295</span></noscript>
-
+		</div><!--End of content-->
 
 			<div data-role="footer" data-position="fixed">
   					<div data-role="navbar">
@@ -67,7 +67,7 @@
     					</ul>
  					</div>
  			</div><!--End of Footer-->	 	
-		</div><!--End of content-->
+		
 	</div><!--end of Home page-->
 </div><!--End of portrait for HomePage-->
 
@@ -97,7 +97,7 @@
 
 				<id= "icon">
 				<p id="wrapper"></p>
-				<center><img id="loader" src="images/loader.gif"/></center>  
+				<!--<center><img id="loader" src="images/loader.gif"/></center>-->
 				<p id="temp"></p>
        			 <p id="sum"></p>
 			</div>
