--- a/index.html
+++ b/index.html
@@ -495,6 +495,7 @@
     <!--End of portrait-->
 
     <div id="landscape" class="hidden">
+    	<div id="appTitle"><h1> Style Weather </h1></div>
         <div id="owl-example" class="owl-carousel" id="slide">
             <div id="hour" clas="hourly">
                 <p id="hour1"></p>
@@ -593,7 +594,7 @@
                 <p id="temp24"></p>
             </div>
 
-        </div>end of owl example
+        </div><!--end of owl example-->
     </div>end of landscape
 </body>
 
