--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </li>
                         <li><a href="#info" class="ui-btn ui-icon-info ui-btn-icon-left">Info</a>
                         </li>
-                        <ul>
+                    <ul>
                 </div>
             </div>
             <!--End of myPanel-->
@@ -480,10 +480,10 @@
 
                         <li><a href="#home" class="ui-btn-active" data-icon="home">Home</a>
                         </li>
-                        <li><a href="#Tomorrow" class="ui-btn-active" data-icon="cloud">Tomorrow</a>
+                        <!--<li><a href="#Tomorrow" class="ui-btn-active" data-icon="cloud">Tomorrow</a>
                         </li>
                         <li><a href="#dayAfterTomorrow" class="ui-btn-active" data-icon="cloud">Day After Tomorrow</a>
-                        </li>
+                        </li>-->
                     </ul>
                 </div>
             </div>
@@ -499,103 +499,103 @@
         <div id="owl-example" class="owl-carousel" id="slide">
             <div id="hour" clas="hourly">
                 <p id="hour1"></p>
-                <p id="temp1"></p>
+                <p id="temp1" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour2"></p>
-                <p id="temp2"></p>
+                <p id="temp2" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour3"></p>
-                <p id="temp3"></p>
+                <p id="temp3" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour4"></p>
-                <p id="temp4"></p>
+                <p id="temp4" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour5"></p>
-                <p id="temp5"></p>
+                <p id="temp5" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour6"></p>
-                <p id="temp6"></p>
+                <p id="temp6" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour7"></p>
-                <p id="temp7"></p>
+                <p id="temp7" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour8"></p>
-                <p id="temp8"></p>
+                <p id="temp8" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour9"></p>
-                <p id="temp9"></p>
+                <p id="temp9" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour10"></p>
-                <p id="temp10"></p>
+                <p id="temp10" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour11"></p>
-                <p id="temp11"></p>
+                <p id="temp11" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour12"></p>
-                <p id="temp12"></p>
+                <p id="temp12" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour13"></p>
-                <p id="temp13"></p>
+                <p id="temp13" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour14"></p>
-                <p id="temp14"></p>
+                <p id="temp14" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour15"></p>
-                <p id="temp15"></p>
+                <p id="temp15" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour16"></p>
-                <p id="temp16"></p>
+                <p id="temp16" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour17"></p>
-                <p id="temp17"></p>
+                <p id="temp17" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour18"></p>
-                <p id="temp18"></p>
+                <p id="temp18" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour19"></p>
-                <p id="temp19"></p>
+                <p id="temp19" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour20"></p>
-                <p id="temp20"></p>
+                <p id="temp20" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour21"></p>
-                <p id="temp21"></p>
+                <p id="temp21" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour22"></p>
-                <p id="temp22"></p>
+                <p id="temp22" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour23"></p>
-                <p id="temp23"></p>
+                <p id="temp23" class="degrees"></p>
             </div>
             <div id="hour" clas="hourly">
                 <p id="hour24"></p>
-                <p id="temp24"></p>
+                <p id="temp24" class="degrees"></p>
             </div>
 
         </div><!--end of owl example-->
-    </div>end of landscape
+    </div><!--end of landscape-->
 </body>
 
 </html>
