hopefully fixed icons
hopefully fixed icons

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="js/app.js"></script>
     <link href="lunastar314.github.io/WeatherFinal/SWicon-01.png" rel="icon" sizes="192x192" />
 	<link href="lunastar314.github.io/WeatherFinal/SWicon-02.png" rel="icon" sizes="128x128" />
-	Owl Carousel-->
+	<!--Owl Carousel-->
     <link rel="stylesheet" href="owl/owl-carousel/owl.carousel.css">
     <link rel="stylesheet" href="owl/owl-carousel/owl.theme.css">
     <script src="owl/assets/js/jquery-1.9.1.min.js"></script>
