--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <link href="lunastar314.github.io/WeatherFinal/weatherIcons-01.png" rel="icon" sizes="192x192" />
-	<link href="lunastar314.github.io/WeatherFinal/weatherIcons-02.png" rel="icon" sizes="128x128" />
+    <!--<link href="lunastar314.github.io/WeatherFinal/weatherIcons-01.png" rel="icon" sizes="192x192" />
+	<link href="lunastar314.github.io/WeatherFinal/weatherIcons-02.png" rel="icon" sizes="128x128" />-->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<!--Owl Carousel-->
     <link rel="stylesheet" href="owl/owl-carousel/owl.carousel.css">
     <link rel="stylesheet" href="owl/owl-carousel/owl.theme.css">
